# rsubstitute

./: README.md
src/: Cargo.toml  rustc-ice-2026-03-05T09_30_03-25696.txt  rustc-ice-2026-03-05T09_30_07-26788.txt
src/rsubstitute/: Cargo.toml  FN_MOD_TODO.rs
src/rsubstitute/not_t1ests/: config_tests.rs  fn_ref_tests.rs  fn_value_type_tests.rs  no_matching_config_tests.rs  struct_base_impl_tests.rs  struct_rc_tests.rs  struct_value_type_tests.rs  trait_ref_tests.rs  trait_value_type_tests.rs
src/rsubstitute/src/: assertions.rs  global_mocks_map.rs  lib.rs  mocks_map.rs  static_local_key.rs
src/rsubstitute/tests/: _FN.rs  _TRAIT.rs  arg_printing_test.rs  associated_types_tests.rs  cdcd.rs  config_tests.rs  dqd.rs  dqq.rs  f.rs  fn_advanced_ref_tests.rs  fn_advanced_tests.rs  fn_generics_tests.rs  fn_ref_tests.rs  fn_ref_type_tests.rs  fn_simple_ref_tests.rs  fn_simple_tests.rs  fn_tests.rs  fn_value_type_tests.rs  generics_info_in_logs_tests.rs  no_matching_config_tests.rs  qqq.rs  reference_tests.rs  repeating_generics_tests.rs  root.rs  rrr.rs  simple_fn_tests.rs  simple_trait_tests.rs  struct_advanced_ref_type_tests.rs  struct_advanced_tests.rs  struct_arc_tests.rs  struct_arc_type_tests.rs  struct_base_impl_tests.rs  struct_generics_tests.rs  struct_rc_tests.rs  struct_ref_tests.rs  struct_repeating_generics_tests.rs  struct_simple_generics_tests.rs  struct_simple_tests.rs  struct_trait_impl_generics_tests.rs  struct_value_type_tests.rs  (+18 more)
src/rsubstitute/tests/fn/: advanced_tests.rs  generics_tests.rs  ref_tests.rs  simple_tests.rs
src/rsubstitute/tests/struct/: arc_tests.rs  value_type_tests.rs  various_self_tests.rs
src/rsubstitute/tests/test_utils/: counter.rs
src/rsubstitute/tests/trait/: arc_tests.rs  generics_tests.rs  simple_tests.rs  various_self_tests.rs
src/rsubstitute_core/: Cargo.toml
src/rsubstitute_core/src/: arguments_matching.rs  call_info.rs  config.rs  di.rs  error_printer.rs  error_printing.rs  fn_call_info.rs  fn_config.rs  fn_data.rs  generics_hash_key.rs  i_base_caller.rs  i_call_base.rs  i_mock_data.rs  i_mut_ref_clone.rs  lib.rs  lifetimes_transmutation.rs  matching_config_search_result.rs  mut_ref_clone.rs  shared_fn_config.rs  static_local_key.rs  times.rs
src/rsubstitute_core/src/args/: arg.rs  arg_check_result.rs  arg_cmp.rs  arg_info.rs  arg_printer.rs  calls_check_result.rs  generic_parameter_info.rs  generics_hash_key.rs  i_arg_infos_provider.rs  i_args_checker.rs  i_args_formatter.rs  i_args_infos_provider.rs  i_args_tuple_provider.rs  i_generics_info_provider.rs  mod.rs
src/rsubstitute_core/src/args_matching/: arg.rs  arg_check_result.rs  arg_info.rs  arg_matching_result.rs  args_matcher.rs  i_arg_infos_provider.rs  i_args_checker.rs  i_args_formatter.rs  mod.rs
src/rsubstitute_core/src/arguments_matching/: arg.rs  args_matcher.rs  mod.rs
src/rsubstitute_core/src/fn_parameters/: call.rs  call_check.rs  call_info.rs  dyn_arg_refs_tuple.rs  dyn_args_checker.rs  dyn_call.rs  dyn_return_value.rs  generics_hash_key.rs  i_arg_refs_tuple.rs  i_call.rs  i_raw_call.rs  i_raw_return_value.rs  i_return_value.rs  mod.rs  return_value.rs  return_value_source.rs
src/rsubstitute_core/src/mock_data/: dyn_base_fn_data.rs  dyn_fn_data.rs  dyn_fn_data_holder.rs  dyn_fn_data_param.rs  fn_callback_tuner.rs  fn_config.rs  fn_data.rs  fn_return_callback_tuner.rs  fn_return_tuner.rs  fn_tuner.rs  fn_verifier.rs  i_mock_data.rs  mod.rs  shared_fn_config.rs  static_fn_mocks_global_map.rs
src/rsubstitute_proc_macro/: Cargo.toml
src/rsubstitute_proc_macro/src/: constants.rs  derive_args_formatter_macro.rs  derive_args_formatter_macro_handler.rs  derive_args_infos_provider_macro.rs  derive_args_infos_provider_macro_handler.rs  derive_args_tuple_provider_macro.rs  derive_args_tuple_provider_macro_handler.rs  derive_clone_for_r_substitute_macro_handler.rs  derive_clone_for_rsubstitute_macro.rs  derive_generics_hash_key_provider_macro.rs  derive_generics_hash_key_provider_macro_handler.rs  derive_generics_info_provider_macro.rs  derive_mock_data_macro.rs  derive_mock_data_macro_handler.rs  di.rs  lib.rs  lifetime_ref.rs  static_syn.rs
src/rsubstitute_proc_macro/src/derive_args_formatter_macros/: derive_args_formatter_macro_handler.rs  mod.rs
src/rsubstitute_proc_macro/src/macros/: constants.rs  fn_decl_extractor.rs  fn_info_extractor.rs  macro_handler.rs  mod.rs  mod_generator.rs  target_decl_extractor.rs
src/rsubstitute_proc_macro/src/mock_generation/: clone_for_rsubstitute_trait_impl.rs  ctx.rs  fn_decl.rs  mock_macro.rs  mod.rs  phantom_field.rs  struct_mock_syntax.rs
src/rsubstitute_proc_macro/src/mock_macros/: attribute_mock_macro_handler.rs  constants.rs  ctx.rs  ctx_factory.rs  fn_decl.rs  fn_decl_extractor.rs  macro_handler.rs  mock_macro.rs  mock_macro_handler.rs  mocked_macro_mode.rs  mocked_macro_target.rs  mod.rs  mod_generator.rs  (+3 more)
src/rsubstitute_proc_macro/tests/: tests.rs
(+320 files in other folders)
