[package]
name = "rsubstitute"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "trait"
path = "bin/bin_trait.rs"

[[bin]]
name = "trait_generics"
path = "bin/bin_trait_generics.rs"

[[bin]]
name = "fn"
path = "bin/bin_fn.rs"

[dependencies]
rsubstitute_core = { workspace = true }
rsubstitute_proc_macro = { workspace = true }