[package]
name = "rsubstitute_proc_macro"
version = "0.1.0"
edition = "2024"

[lib]
name = "rsubstitute_proc_macro"
proc-macro = true

[dependencies]
rsubstitute_core = { workspace = true }
itertools = { workspace = true }

proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
